ingress/ingress-public-kafka-s3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink-kafka-s3-rest-ingress
  namespace: emr-flink
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: flink-kafka-pub-alb
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8081}]'
  labels:
    app: flink-kafka-s3
    type: flink-operator
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flink-kafka-s3-rest
            port:
              number: 8081
